[gd_scene load_steps=4 format=3 uid="uid://11ww35fhmmjf"]

[ext_resource type="Script" uid="uid://clo5k438rdakb" path="res://scenes/SidePanel/side_panel.gd" id="1_rn45t"]
[ext_resource type="PackedScene" uid="uid://lfenjwd27ney" path="res://scenes/rack-sidebar/rack-sidebar.tscn" id="2_fp1bc"]
[ext_resource type="PackedScene" uid="uid://nkjjomc0h8dx" path="res://scenes/module-sidebar/module-sidebar.tscn" id="2_yokaq"]

[node name="SidePanel" type="Control"]
z_index = 3
custom_minimum_size = Vector2(20, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_rn45t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1059.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.34117648, 0.27450982, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="RackName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ModuleList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Top Rack" type="Node2D" parent="VBoxContainer"]

[node name="RackSidebar" parent="VBoxContainer/Top Rack" instance=ExtResource("2_fp1bc")]
position = Vector2(25.55, 145.81)
default_test_module = ExtResource("2_yokaq")
